Wed Nov  9 16:45:03 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal/Subscriber.cpp:

          Comments and formatting changes.

        * docs/getting_started.odt:

          Updates for Subscriber.cpp

Wed Nov  9 16:20:26 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * docs/getting_started.odt:

          Complete publisher.cpp explanation.

Wed Nov  9 15:40:07 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal/Publisher.cpp:

          Don't use atoi() directly.

Wed Nov  9 04:18:55 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal/Publisher.cpp:

          Fix typos, reformat

        * docs/getting_started.odt:

          Finsish publisher code description.

Tue Nov  8 23:06:03 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal/Boilerplate.h:
        * DevGuideExamples/DCPS/Messenger.minimal/Boilerplate.cpp:
        * DevGuideExamples/DCPS/Messenger.minimal/DataReaderListenerImpl.cpp:
        * DevGuideExamples/DCPS/Messenger.minimal/Publisher.cpp:

          Rename narrowXXX methods to narrow.

        * docs/getting_started.odt:

          Updates for publisher code.

Tue Nov  8 22:00:14 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal/Boilerplate.cpp:
        * DevGuideExamples/DCPS/Messenger.minimal/Publisher.cpp:

          fuzz.

Tue Nov  8 21:57:37 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_tests.lst:
        * java/tests/dcps_java_tests.lst:
        * tools/modeling/tests/modeling_tests.lst:

          Use the "NO_MCAST" Config value to prevent tests which require
          multicast from running on platforms that don't have multicast
          routing enabled.

Tue Nov  8 21:09:24 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal:
