@@ -6,15 +6,8 @@
  * See: http://www.opendds.org/license.html
  */
 
-#include "Boilerplate.h"
-#include <ace/Log_Msg.h>
-#include <ace/OS_NS_stdlib.h>
-
 #include "DataReaderListenerImpl.h"
-#include "MessengerTypeSupportC.h"
-#include "MessengerTypeSupportImpl.h"
-
-#include <iostream>
+#include "Boilerplate.h"
 
 void
 DataReaderListenerImpl::on_data_available(DDS::DataReader_ptr reader)
